cmake_minimum_required(VERSION 3.0.2)
project(find_rect)


find_package(catkin REQUIRED COMPONENTS
  cv_bridge
  roscpp
  rospy
  std_msgs
  usb_cam
)

find_package(OpenCV REQUIRED)



catkin_package(
INCLUDE_DIRS ${catkin_INCLUDE_DIRS}
LIBRARIES find_rect
LIBRARIES opencv
CATKIN_DEPENDS cv_bridge roscpp rospy std_msgs usb_cam
#DEPENDS system_lib
)

include_directories(
# include
  ${catkin_INCLUDE_DIRS}
  ${OpenCV_INCLUDE_DIRS}

)


add_executable(${PROJECT_NAME} src/rect_pub.cpp)

add_dependencies(${PROJECT_NAME} ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})

target_link_libraries(${PROJECT_NAME}
  ${catkin_LIBRARIES}
  ${OpenCV_LIBS}
)
